Fixes type in text alignment. (#7)

--- a/src/Typography/Typography.css
+++ b/src/Typography/Typography.css
@@ -65,7 +65,7 @@
 /* formatting */
 
 .text-left { text-align: left; }
-.text-right { text-align: justify; }
+.text-right { text-align: right; }
 .text-center { text-align: center; }
 .text-justify { text-align: justify; }
 
